staring working in simple vanilla javascript in task manager

--- a/DOM-webpack4-boiler/package.json
+++ b/DOM-webpack4-boiler/package.json
@@ -7,7 +7,7 @@
     "build": "webpack",
     "start": "webpack-dev-server"
   },
-  "author": "HM Nayem",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
